# xl_player

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  bugs.markdown  build.gradle  gradlew  settings.gradle  xl_build_ffmpeg.sh
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fs_distortion.glsl  fs_es2_egl_ext.glsl  fs_es2_nv12.glsl  fs_es2_yuv_420p.glsl  vs_distortion.glsl  vs_es2_ball.glsl  vs_es2_expand.glsl  vs_es2_rect.glsl
app/src/main/cpp/: xl_player.c  xl_playerCore.c  xl_playerCore.h  xl_player_read_thread.c
app/src/main/cpp/xl_audio/: xl_audio_filter.c  xl_audio_player.c
app/src/main/cpp/xl_container/: xl_frame_pool.c  xl_packet_pool.c  xl_packet_queue.c
app/src/main/cpp/xl_decoders/: xl_mediacodec.c  xl_player_audio_decode_thread.c  xl_player_video_hw_decode_thread.c  xl_player_video_sw_decode_thread.c
app/src/main/cpp/xl_head_tracker/: HeadTracker.h  SO3Util.cpp
app/src/main/cpp/xl_types/: xl_macro.h  xl_player_types.h
app/src/main/cpp/xl_utils/: xl_jni_reflect.c  xl_statistics.c
app/src/main/cpp/xl_video/: xl_glsl_program.c  xl_model.c  xl_model.h  xl_model_vr.c  xl_player_gl_thread.c
app/src/main/java/com/cls/xl/xl/: BaseHolderCallback.java  ChooseFileActivity.java  MainActivity.java  MultiPlayerActivity.java  SampleVideoActivity.java  SimpleDemoActivity.java  SimpleVideoActivity.java  SinglePlayerActivity.java  WhackAMoleActivity.java  Whack_a_mole_Activity.java
app/src/main/java/com/cls/xl/xl/youtube/: CustomViewDragHelper.java  DragVideoView.java  YoutubeLikeActivity.java
app/src/main/res/layout/: activity_choose_file.xml  activity_main.xml  activity_multi_player.xml  activity_simple_demo.xml  activity_simple_video.xml  activity_single.xml  activity_whack_a_mole.xml  activity_youtube.xml  item_file.xml  item_player.xml  item_player_page.xml  item_video.xml  item_video_name.xml
app/src/main/res/values/: colors.xml  strings.xml
cpp/: xl_playerCore.c
cpp/xl_audio/: xl_audio_player.c
cpp/xl_container/: xl_frame_queue.c  xl_packet_queue.h
cpp/xl_decoders/: xl_mediacodec.c  xl_player_audio_decode_thread.c  xl_player_video_hw_decode_thread.c  xl_player_video_sw_decode_thread.c
cpp/xl_head_tracker/: Matrix3x3d.cpp  OrientationEKF.h
cpp/xl_types/: xl_macro.h  xl_player_types.h  xl_video_render_types.h
cpp/xl_video/: xl_glsl_program.h  xl_model.c  xl_model_ball.c  xl_model_ball.h  xl_model_rect.c  xl_model_rect.h  xl_model_vr.h  xl_player_gl_thread.c  xl_texture.c  xl_video_render.c  xl_video_render.h
gradle/wrapper/: gradle-wrapper.properties
xl-player-arm64v8a/: build.gradle
xl-player-arm64v8a-21/: build.gradle  proguard-rules.pro
xl-player-arm64v8a-21/src/main/: AndroidManifest.xml  cpp
xl-player-arm64v8a-21/src/main/res/values/: strings.xml
xl-player-arm64v8a/src/main/: AndroidManifest.xml
xl-player-armeabi/: build.gradle
xl-player-armeabi-21/: build.gradle
xl-player-armeabi-21/src/main/: AndroidManifest.xml
xl-player-armeabi-21/src/main/res/values/: strings.xml
xl-player-armeabi/src/main/: AndroidManifest.xml
xl-player-armv7a/: CMakeLists.txt  build.gradle
xl-player-armv7a-21/: CMakeLists.txt  build.gradle
xl-player-armv7a-21/src/main/: AndroidManifest.xml
xl-player-armv7a-21/src/main/cpp/xl_decoders/: xl_player_video_sw_decode_thread.c
xl-player-armv7a-21/src/main/cpp/xl_video/: xl_model_ball.c  xl_model_ball.h  xl_model_vr.h  xl_player_gl_thread.h  xl_texture.h
xl-player-armv7a-21/src/main/res/values/: strings.xml
xl-player-armv7a/src/main/: AndroidManifest.xml  cpp
xl-player-armv7a/src/main/cpp/: xl_player.c  xl_playerCore.c  xl_player_read_thread.c  xl_player_read_thread.h
xl-player-armv7a/src/main/cpp/xl_audio/: xl_audio_filter.c  xl_audio_filter.h  xl_audio_player.c  xl_audio_player.h
xl-player-armv7a/src/main/cpp/xl_container/: xl_frame_pool.h  xl_frame_queue.h  xl_packet_pool.h
xl-player-armv7a/src/main/cpp/xl_decoders/: xl_mediacodec.c  xl_mediacodec.h  xl_player_audio_decode_thread.h  xl_player_video_hw_decode_thread.c  xl_player_video_hw_decode_thread.h  xl_player_video_sw_decode_thread.h
xl-player-armv7a/src/main/cpp/xl_head_tracker/: HeadTracker.cpp  Matrix3x3d.h  OrientationEKF.cpp  SO3Util.h  Vector3d.cpp  Vector3d.h
xl-player-armv7a/src/main/cpp/xl_utils/: xl_clock.c  xl_clock.h  xl_jni_reflect.h  xl_statistics.c  xl_statistics.h
xl-player-armv7a/src/main/cpp/xl_video/: xl_glsl_program.c  xl_mat4.c  xl_mat4.h  xl_mesh_factory.c  xl_mesh_factory.h  xl_model.h  xl_model_rect.h  xl_model_vr.c  xl_tracker.c  xl_tracker.h
xl-player-armv7a/src/main/java/com/xl/media/hwdecode/: HwDecodeBridge.java
xl-player-armv7a/src/main/res/values/: strings.xml
xl-player-java/: build.gradle
xl-player-java/src/main/: AndroidManifest.xml
xl-player-java/src/main/java/com/xl/media/hwdecode/: HwDecodeBridge.java  SurfaceTextureBridge.java
